# gRPC

./: README.md
grpc-demo-tonic/: Cargo.toml  build.rs  index.proto
grpc-demo-tonic/src/: client.rs  server.rs
